[package]
name = "rest_api-rocket-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
